[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/audio/I Am Just a Pickle.ogg" type="AudioStream" id=1]
[ext_resource path="res://src/Background/Credits-BG.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UserInterface/Credits.gd" type="Script" id=3]
[ext_resource path="res://assets/art/Fonts/BitPickle.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/UserInterface/Transistions/FadeInLong.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 38
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="End Credits" type="Node2D"]
script = ExtResource( 3 )

[node name="Credits" parent="." instance=ExtResource( 2 )]
offset = Vector2( 0, 0 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Just a Pickle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
bus = "Music"

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
offset = Vector2( 960, 540 )
transform = Transform2D( 1, 0, 0, 1, 960, 540 )

[node name="CreditsContainer" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line" type="Label" parent="CanvasLayer/CreditsContainer"]
anchor_right = 1.0
margin_top = 1080.0
margin_right = -1920.0
margin_bottom = 1119.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Credits line"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false
margin_left = -960.0
margin_top = -540.0
margin_right = -960.0
margin_bottom = -540.0

[connection signal="finished" from="Just a Pickle" to="." method="_on_Just_a_Pickle_finished"]
[connection signal="fadein_finished" from="CanvasLayer/FadeIn" to="." method="_on_FadeIn_fadein_finished"]
